[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/elements/Timer.gd" type="Script" id=1]
[ext_resource path="res://assets/game_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/baby_doll.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[node name="Timer" type="Node2D" groups=["time"]]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimeCount" type="Label" parent="."]
margin_left = 282.0
margin_top = 55.0
margin_right = 322.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="WinMessage" type="Label" parent="."]
margin_left = 58.0
margin_top = 140.0
margin_right = 563.0
margin_bottom = 187.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Â¡PUZZLE COMPLETADO!"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
